--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@deemlol/next-icons": "^0.1.9",
     "@formatjs/intl-localematcher": "^0.6.2",
+    "@tailwindcss/postcss": "^4.1.18",
     "negotiator": "^1.0.0",
     "next": "16.0.10",
+    "postcss": "^8.5.6",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
