--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@deemlol/next-icons": "^0.1.9",
     "@formatjs/intl-localematcher": "^0.6.2",
     "@tailwindcss/postcss": "^4.1.18",
+    "@vercel/analytics": "^1.6.1",
     "negotiator": "^1.0.0",
     "next": "16.0.10",
     "postcss": "^8.5.6",
